@@ -62,6 +62,10 @@ IN DEVELOPMENT
       make it easy to identify which test spawned a thread with an unhandled
       exception. (Andrew Bennetts)
 
+    * New ``--debugflag``/``-E`` option to ``bzr selftest`` for setting
+      debug flags.  The ``-Dselftest_debug`` global option has been replaced by
+      the ``-E=allow_debug`` option for selftest. (Andrew Bennetts)
+
   INTERNALS:
 
     * Implement xml8 serializer.  (Aaron Bentley)
